tests/traci/get_variable/MeMeDetector/errors/UnsupportedVariable/errors.traci
Error: Answered with error to command 0xa1: Get Multi Entry Exit Detector Variable: unsupported variable 0xff specified
